@@ -1,5 +1,10 @@
 2001-04-12  Martin Baulig  <baulig@suse.de>
 
+	* gnome-program.h (GnomeModuleHook): The `GnomeModuleInfo' argument
+	is deep-copied, so you can actually modify it.
+
+2001-04-12  Martin Baulig  <baulig@suse.de>
+
 	* libgnome.h (libgnome_module_info): Added external declaration.
 
 	* gnomelib-init.c: Renamed to libgnome-init.c.
